--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "url": ""
   },
   "dependencies": {
+    "acorn": "^0.6.0",
     "assurance": "^0.2.4",
     "async": "^0.7.0",
     "auto-reload-brunch": ">= 1.0 < 1.8",
     "bcrypt": "^0.7.7",
-    "blockly": "0.0.6",
     "coffee-fn": "^0.1.2",
     "coffee-loader": "^0.7.2",
     "coffee-script": "^1.6.3",
     "coffeeify": "^0.6.0",
+    "color": "^0.6.0",
     "composed-validations": "^0.8.0",
     "connect-flash": "^0.1.1",
     "connect-redis": "1.4.7",
@@ -42,7 +43,6 @@
     "mongoose-currency": "0.0.4",
     "mongoose-encrypted": "0.0.8",
     "mongoose-file": "0.0.2",
-    "mongoose-findorcreate": "^0.1.2",
     "mongoose-function": "^0.1.0",
     "mongoose-materialized": "^0.1.6",
     "mongoose-middleware": "^0.2.3",
@@ -56,9 +56,11 @@
     "nodemailer": "^0.6.1",
     "passport": "^0.2.0",
     "passport-local": "^0.1.6",
+    "pegjs": "^0.8.0",
     "safejson": "^1.0.0",
     "sugar": "^1.4.1",
     "through": "^2.3.4",
+    "tinycolor": "0.0.1",
     "tracer": "^0.6.2",
     "underscore.string": "^2.3.3",
     "verbal-expressions": "^0.1.2"
