--- a/package.json
+++ b/package.json
@@ -13,48 +13,50 @@
     "assurance": "^0.2.4",
     "async": "^0.7.0",
     "auto-reload-brunch": ">= 1.0 < 1.8",
-    "bcrypt": "^0.7.7",
+    "bcrypt": "^0.7.8",
+    "body-parser": "^1.8.1",
     "coffee-fn": "^0.1.2",
     "coffee-loader": "^0.7.2",
-    "coffee-script": "^1.6.3",
-    "coffeeify": "^0.6.0",
+    "coffee-script": "^1.8.0",
     "composed-validations": "^0.8.0",
-    "connect-flash": "^0.1.1",
-    "connect-redis": "1.4.7",
-    "connect-session": "0.0.1",
-    "cross-console": "git+https://github.com/geedew/cross-console.git",
+    "cookie-parser": "^1.3.3",
+    "cookie-session": "^1.0.2",
+    "csurf": "^1.6.1",
     "cv-credit-card": "^0.2.0",
     "datatable": "^1.1.2",
     "debug-trace": "^0.2.3",
     "diff": "^1.0.8",
     "dire": "^1.0.1",
-    "express": "3.5.1",
-    "express-validator": "^2.1.0",
-    "grunt-file-creator": "^0.1.1",
+    "errorhandler": "^1.2.0",
+    "express": "^4.9.0",
+    "express-flash": "0.0.2",
+    "express-session": "^1.8.1",
+    "grunt-file-creator": "^0.1.2",
     "handlebars": "^2.0.0",
-    "helmet": "^0.2.1",
-    "humanize-plus": "^1.4.2",
+    "helmet": "^0.4.1",
+    "humanize-plus": "^1.5.0",
     "humanquery": "^0.1.0",
     "i18next": "^1.7.4",
-    "jade": "^0.33.0",
+    "jade": "^1.6.0",
     "jquery": "^2.1.1",
     "js-beautify": "^1.5.1",
     "lodash": "^2.4.1",
     "lodash-deep": "^1.2.1",
     "lodash-prototype": "0.0.0",
     "mathjs": "^0.24.1",
-    "moment": "^2.7.0",
-    "mongoose": "3.8.12",
+    "method-override": "^2.2.0",
+    "moment": "^2.8.3",
+    "mongoose": "^3.8.16",
     "mongoose-account-locking": "0.0.1",
-    "mongoose-auto-increment": "^3.0.2",
+    "mongoose-auto-increment": "^3.0.8",
     "mongoose-construct": "0.0.1",
     "mongoose-currency": "0.0.4",
     "mongoose-encrypted": "0.0.8",
     "mongoose-file": "0.0.2",
     "mongoose-function": "^0.1.0",
     "mongoose-history": "^0.3.1",
-    "mongoose-materialized": "^0.1.6",
-    "mongoose-middleware": "^0.2.3",
+    "mongoose-materialized": "^0.1.8",
+    "mongoose-middleware": "^0.2.9",
     "mongoose-moment": "0.0.1",
     "mongoose-ownable": "^0.1.3",
     "mongoose-regexp": "0.0.1",
@@ -64,16 +66,19 @@
     "mongoose-softdelete": "^0.2.5",
     "mongoose-time": "^0.1.0",
     "mongoose-ttl": "0.0.3",
+    "morgan": "^1.3.1",
     "mustache": "^0.8.2",
     "natural": "^0.1.28",
     "node-secure": "^0.2.0",
-    "nodemailer": "^0.6.1",
-    "passport": "^0.2.0",
+    "nodemailer": "^0.6.5",
+    "passport": "^0.2.1",
     "passport-local": "^0.1.6",
     "pegjs": "^0.8.0",
     "percent": "^1.1.1",
     "safejson": "^1.0.0",
     "sanitize-filename": "^1.1.1",
+    "serve-favicon": "^2.1.3",
+    "serve-static": "^1.6.1",
     "simple-errors": "0.0.5",
     "sugar": "^1.4.1",
     "swag": "^0.7.0",
@@ -88,6 +93,7 @@
   },
   "devDependencies": {
     "debowerify": "^0.7.1",
+    "debug-trace": "^0.2.3",
     "grunt": "^0.4.4",
     "grunt-browserify": "^2.1.1",
     "grunt-contrib-clean": "^0.5.0",
