--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "composed-validations": "^0.8.0",
     "cookie-parser": "^1.3.3",
     "cookie-session": "^1.0.2",
+    "countries-list": "^1.0.3",
     "csurf": "^1.6.1",
     "cv-credit-card": "^0.2.0",
     "diff": "^1.0.8",
@@ -59,7 +60,6 @@
     "mongoose-moment": "0.0.1",
     "mongoose-ownable": "^0.1.3",
     "mongoose-regexp": "0.0.1",
-    "mongoose-rest-endpoints": "^3.4.5",
     "mongoose-schema-extend": "^0.1.7",
     "mongoose-search-plugin": "^0.1.2",
     "mongoose-softdelete": "^0.2.5",
@@ -90,7 +90,7 @@
   "devDependencies": {
     "debowerify": "^0.7.1",
     "debug-trace": "^0.2.3",
-    "grunt": "^0.4.4",
+    "grunt": "^0.4.5",
     "grunt-browserify": "^2.1.1",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-coffee": "^0.10.1",
@@ -99,7 +99,6 @@
     "grunt-contrib-compressor": "^0.1.3",
     "grunt-contrib-concat": "^0.3.0",
     "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-crypt": "^0.1.0",
     "grunt-contrib-environment": "^0.1.0",
     "grunt-contrib-htmlmin": "^0.2.0",
     "grunt-contrib-i18next": "0.0.1",
