--- a/bower.json
+++ b/bower.json
@@ -21,26 +21,25 @@
     "requirejs": "~2.1.11",
     "jquery": "~2.1.0",
     "font-awesome": "~4.0.3",
-    "i18next": "~1.7.2",
+    "i18next": "~1.7.4",
     "bootstrap": "~3.1.1",
-    "angular": "~1.2.18",
-    "angular-ui-router": "~0.2.10",
-    "angular-cookies": "~1.2.16",
-    "angular-resource": "~1.2.16",
-    "ng-i18next": "~0.3.1",
+    "angular": "~1.3.2",
+    "angular-ui-router": "~0.2.11",
+    "angular-cookies": "~1.3.2",
+    "angular-resource": "~1.3.2",
     "underscore": "~1.6.0",
-    "ng-table": "~0.3.1",
-    "angular-animate": "~1.2.16",
+    "ng-table": "~0.3.3",
+    "angular-animate": "~1.3.2",
     "angular-ui": "~0.4.0",
-    "angular-route": "~1.2.16",
+    "angular-route": "~1.3.2",
     "moment": "~2.6.0",
     "eonasdan-bootstrap-datetimepicker": "~3.0.0",
     "yamm3": "~1.0.0",
     "jquery-ui": "~1.10.4",
     "jquerypp": "~1.0.1",
-    "angular-webstorage": "~0.10.3",
+    "angular-webstorage": "~0.11.0",
     "jquery-switchbutton": "*",
-    "angular-bootstrap": "~0.11.0",
+    "angular-bootstrap": "~0.11.2",
     "multiselect": "~0.9.11",
     "angular-filters": "~1.1.0",
     "angular-lodash": "~0.1.0",
@@ -49,12 +48,12 @@
     "ng-contenteditable": "*",
     "tinycolor": "~1.0.0",
     "selectize": "~0.11.0",
-    "angular-sanitize": "~1.2.26",
+    "angular-sanitize": "~1.3.2",
     "angular-placeholders": "*",
     "restangular": "~1.4.0",
     "cross-console": "~0.3.1",
     "traverse": "~0.6.7",
-    "angular-breadcrumb": "~0.2.3",
+    "angular-breadcrumb": "~0.3.0",
     "angular-spectrum-colorpicker": "~1.0.16",
     "bootstrap-touchspin": "~3.0.1",
     "jquery-smooth-scroll": "~1.5.0",
@@ -76,9 +75,28 @@
     "perfect-scrollbar": "~0.5.2",
     "angular-perfect-scrollbar": "*",
     "jquery-maskedinput": "~1.3.1",
-    "angular-schema-form": "~0.7.6"
+    "angular-schema-form": "~0.7.6",
+    "bootstrap-vertical-tabs": "~1.2.0",
+    "ng-click-select": "~0.1.4",
+    "ng-scope": "~0.1.2",
+    "angular-blocks": "~0.1.9",
+    "angular-mocks": "~1.3.2",
+    "angular-ui-sortable": "~0.13.0",
+    "ng-grid": "~2.0.14",
+    "ng-i18next": "https://github.com/i18next/ng-i18next.git#~0.3.5"
   },
   "resolutions": {
-    "angular": "~1.2.18"
+    "angular": "~1.3.2",
+    "angular-cookies": "~1.3.2",
+    "angular-resource": "~1.3.2",
+    "angular-route": "~1.3.2",
+    "angular-animate": "~1.3.2",
+    "angular-mocks": "~1.3.2",
+    "angular-breadcrumb": "~0.3.0",
+    "angular-sanitize": "~1.3.2",
+    "angular-ui-sortable": "~0.13.0",
+    "es5-shim": "2.3.0",
+    "angular-webstorage": "~0.11.0",
+    "ng-grid": "~2.0.14"
   }
 }
