--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
     "mongoose-materialized": "^0.1.8",
     "mongoose-middleware": "^0.2.9",
     "mongoose-moment": "0.0.1",
-    "mongoose-ownable": "^0.1.3",
     "mongoose-regexp": "0.0.1",
     "mongoose-schema-extend": "^0.1.7",
     "mongoose-search-plugin": "^0.1.2",
@@ -88,6 +87,7 @@
     "debowerify": "^0.7.1",
     "debug-trace": "^0.2.3",
     "grunt": "^0.4.5",
+    "grunt-bower-concat": "^0.4.0",
     "grunt-browserify": "^2.1.1",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-coffee": "^0.12.0",
@@ -114,6 +114,7 @@
     "grunt-env": "^0.4.1",
     "grunt-express-server": "^0.4.13",
     "grunt-file-creator": "^0.1.2",
+    "grunt-html2js": "^0.2.9",
     "grunt-open": "^0.2.3",
     "grunt-reload": "^0.2.0",
     "grunt-shell": "^0.6.4",
